add point for k=n

--- a/encoding_decoding.ipynb
+++ b/encoding_decoding.ipynb
@@ -35,6 +35,9 @@
     "    I_k = np.eye(k, dtype=int)\n",
     "    I_nk = np.eye(n - k, dtype=int)\n",
     "\n",
+    "    if k == n:\n",
+    "        return I_k\n",
+    "    \n",
     "    # find a generating matrix where rank of H is n - k\n",
     "    while True:\n",
     "        P = np.random.randint(2, size=(k, n - k))\n",
@@ -149,7 +152,7 @@
     "    # teplet_size refers to alphabet size\n",
     "    for teplet_size in [2,4,8,16]:\n",
     "        # iterate over k, number of bits allocated to the message. n-k bits allocated to error correcting codes\n",
-    "        for k in range(1, pep_length*int(math.log(teplet_size,2))):\n",
+    "        for k in range(1, pep_length*int(math.log(teplet_size,2)) + 1):\n",
     "            print(k, end = \", \")\n",
     "            if k not in k_to_ts_to_acc:\n",
     "                k_to_ts_to_acc[k] = {}\n",
@@ -201,9 +204,9 @@
     "    for reread_idx in [2, 1, 0]:\n",
     "        # number of rereads (along with alphabet size) determines the error rate \n",
     "        rereads = 10 if reread_idx == 2 else 5 if reread_idx == 1 else 1\n",
-    "        results = np.load(f\"2_barcode_{rereads}rr_{protein_size}len.npy\", allow_pickle=True).item()\n",
-    "        # results = calc_data_np(protein_size, reread_idx)\n",
-    "        # np.save(f\"2_barcode_{rereads}rr_{protein_size}len.npy\", results)\n",
+    "        # results = np.load(f\"./barcode_results/barcode_{rereads}rr_{protein_size}len.npy\", allow_pickle=True).item()\n",
+    "        results = calc_data_np(protein_size, reread_idx, results)\n",
+    "        # np.save(f\"./barcode_results/barcode_{rereads}rr_{protein_size}len.npy\", results)\n",
     "        for k, dic in results.items():\n",
     "            max_ts = -1\n",
     "            max_acc = 0\n",
@@ -252,7 +255,7 @@
     "'font.family':'arial',\n",
     "}\n",
     "plt.rcParams.update(new_rc_params)\n",
-    "plt.savefig(f\"barcodes_space.svg\", transparent=True , dpi=600, bbox_inches='tight', format='svg')\n",
+    "# plt.savefig(f\"barcodes_space.svg\", transparent=True , dpi=600, bbox_inches='tight', format='svg')\n",
     "plt.show()"
    ]
   }
