--- a/rereads_simulation.ipynb
+++ b/rereads_simulation.ipynb
@@ -438,7 +438,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Perform the simulation save results"
+    "#### Perform the simulation (~90 min) & save results"
    ]
   },
   {
